# reliefmesh

./: .gitignore  README.md  commit_sequence.sh  setup_testnet.sh  user_onboarding_responses.csv
.github/workflows/: deploy.yml
contracts/: Cargo.toml  deploy_testnet.sh  init_contracts.sh
contracts/clawback-controller/: Cargo.toml
contracts/clawback-controller/src/: lib.rs
contracts/relief-pool/: Cargo.toml
contracts/relief-pool/src/: lib.rs
contracts/relief-pool/test_snapshots/tests/: test_any_user_can_distribute_in_demo_mode.1.json  test_disaster_stats.1.json  test_distribute_aid.1.json  test_distribute_when_paused_fails.1.json  test_distribution_record_stored.1.json  test_double_init_fails.1.json  test_emergency_pause.1.json  test_emergency_resume.1.json  test_fund_pool.1.json  test_fund_with_zero_fails.1.json  test_get_available_balance_decreases_after_distribution.1.json  test_get_distributions_by_disaster.1.json  test_initialize.1.json  test_multiple_fundings_accumulate.1.json  test_non_admin_cannot_distribute.1.json  test_overdistribution_fails.1.json
contracts/shopkeeper-registry/: Cargo.toml
contracts/shopkeeper-registry/src/: lib.rs
contracts/victim-registry/: Cargo.toml
docs/: architecture.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx  FreighterCheck.tsx  PageTracker.tsx
frontend/context/: WalletContext.tsx
frontend/lib/: .stellar.ts.swp  feeBump.ts  indexer.ts  monitoring.ts  stellar.ts
(+65 files in other folders)
